# tpmiddle-rs

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
core/: Cargo.toml
core/src/: control.rs  hid.rs  lib.rs  middle_button.rs  units.rs
frontends/win/: Cargo.toml
frontends/win/src/: bt_wheel_blocker.rs  event_reader.rs  lib.rs  mouse_hal_impl.rs  tpmiddle.rs  transport_agnostic_tpmiddle.rs  util.rs  window.rs
res/: device info.txt
res/hid reports/: 17ef_60e1  17ef_60ee_00  17ef_60ee_01  17ef_60ee_02
src/: args.rs  bt.rs  bt_wheel_blocker.rs  control.rs  hid.rs  hook.rs  input.rs  lib.rs  main.rs  middle_button_state.rs  mouse_hal.rs  mouse_hal_impl.rs  tpmiddle.rs  transport_agnostic_tpmiddle.rs  util.rs  window.rs
