[package]
name = "tpmiddle-rs"
version = "0.1.3"
authors = ["SeongChan Lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "./core" }
anyhow = "^1.0.32"
clap = "^3.0.0-beta.2"
log = "^0.4.11"
slog = "^2.5.2"
slog-scope = "^4.3.0"
slog-term = "^2.6.0"
slog-stdlog = "^4.1.0"
slog-envlogger = "^2.2.0"

[target.'cfg(windows)'.dependencies]
frontend = { path = "frontends/win" }

[workspace]
members = [
    "core",
    "frontends/*"
]
