[package]
name = "core"
version = "0.1.0"
authors = ["SeongChan Lee <foriequal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0.21"
crossbeam-channel = "^0.4.4"
hidapi = "^1.2.3"
spin_sleep = "^1.0.0"
log = "0.4.14"

[dependencies.clap]
version = "^3.0.0-beta.2"
default-features = false
features = [
    "std",
    "derive"
]
